alignment error fixed

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -40,6 +40,12 @@ Version: 1.0
 */
 
 
+
+ 
+  
+  
+
+
 /**
 * Base Styles
 **/
@@ -5665,12 +5671,12 @@ a.wp-block-button__link {
   }
 
   .margin {
-	margin-top: 9vh;
+	margin-top: 5vh;
   }
   
   @media (max-width: 1920px) {
 	.margin {
-	  margin-top: 9vh; /* Adjust this value as needed */
+	  margin-top: 5vh; /* Adjust this value as needed */
 	}
   }
 
@@ -5696,4 +5702,7 @@ a.wp-block-button__link {
 	-webkit-transition: all 0.3s cubic-bezier(0.3, 0, 0.3, 1);
 	-o-transition: all 0.3s cubic-bezier(0.3, 0, 0.3, 1);
   }
+
+
+
   
